--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj.filters
@@ -20,10 +20,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Core\Pass\BasicParticlePass.h">
+    <ClInclude Include="include\Core\Pass\Particle\BasicParticlePass.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="include\Core\Pass\BasicPass.h">
+    <ClInclude Include="include\Core\Pass\3DObject\BasicPass.h">
       <Filter>Header</Filter>
     </ClInclude>
     <ClInclude Include="include\Core\DirectX11\BlendState.h">
@@ -98,7 +98,7 @@
     <ClInclude Include="include\util\VertexDesc.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="include\Core\Pass\WirePass.h">
+    <ClInclude Include="include\Core\Pass\3DObject\WirePass.h">
       <Filter>Header</Filter>
     </ClInclude>
     <ClInclude Include="include\Export\dllExport.h">
@@ -110,16 +110,16 @@
     <ClInclude Include="include\Core\DirectX11\ObjectIDTexture.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="include\Core\Pass\OnlyObjectIDPass.h">
+    <ClInclude Include="include\Core\Pass\3DObject\OnlyObjectIDPass.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="include\Core\Pass\BasicParticleObjectIDPass.h">
+    <ClInclude Include="include\Core\Pass\Particle\BasicParticleObjectIDPass.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="include\Core\Pass\NoLit_OrthoGraphicsPass.h">
+    <ClInclude Include="include\Core\Pass\3DObject\NoLit_OrthoGraphicsPass.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="include\Core\Pass\OITParticlePass.h">
+    <ClInclude Include="include\Core\Pass\Particle\OITParticlePass.h">
       <Filter>Header</Filter>
     </ClInclude>
     <ClInclude Include="include\Core\DirectX11\OrderIndependentTransparency.h">
@@ -128,12 +128,21 @@
     <ClInclude Include="include\Core\Pass\ShaderFlagsManager.h">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="include\Core\Pass\Particle\ParticleOutLinePass.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Core\Pass\OutLinePass.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Core\Pass\BlurPass.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Core\Pass\BasicParticlePass.cpp">
+    <ClCompile Include="src\Core\Pass\Paritcle\BasicParticlePass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Pass\BasicPass.cpp">
+    <ClCompile Include="src\Core\Pass\3DObject\BasicPass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Core\DirectX11\BlendState.cpp">
@@ -202,28 +211,37 @@
     <ClCompile Include="src\Core\Resource\VBIBMesh.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Pass\WirePass.cpp">
+    <ClCompile Include="src\Core\Pass\3DObject\WirePass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Core\DirectX11\ObjectIDTexture.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Pass\OnlyObjectIDPass.cpp">
+    <ClCompile Include="src\Core\Pass\3DObject\OnlyObjectIDPass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Pass\BasicParticleObjectIDPass.cpp">
+    <ClCompile Include="src\Core\Pass\Paritcle\BasicParticleObjectIDPass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Pass\NoLit_OrthoGraphicsPass.cpp">
+    <ClCompile Include="src\Core\Pass\3DObject\NoLit_OrthoGraphicsPass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Pass\OITParticlePass.cpp">
+    <ClCompile Include="src\Core\Pass\Paritcle\OITParticlePass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Core\DirectX11\OrderIndependentTransparency.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Core\Pass\ShaderFlagsManager.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\Pass\Paritcle\ParticleOutLinePass.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\Pass\OutLinePass.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\Pass\BlurPass.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
@@ -235,6 +253,7 @@
     <FxCompile Include="..\..\Build\x64\Debug\Asset\Particle\Shader\BasicParticle_VS.hlsl" />
     <FxCompile Include="..\..\Build\x64\Debug\Asset\Particle\Shader\Wire_PS.hlsl" />
     <FxCompile Include="..\..\Build\x64\Debug\Asset\Particle\Shader\Wire_VS.hlsl" />
+    <FxCompile Include="..\..\Build\x64\Debug\Asset\Particle\Shader\PostProcessing.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Build\x64\Debug\Asset\Particle\Shader\ConstantBuffer.hlsli" />
