Level Editor 개발 중 (Full-Docking, View Panel 구분, GameEngine 리팩토링)
- Editor Full - Docking 화면 구성
- Game View, Scene View 에 각각의 Render Target를 뽑아낼 수 있도록 구현
- 기존 DUOLGameEngine::Update 에서 Logic Update / Render 구분
    - 외부 Application 에서 유동적으로 사용할 수 있습니다.

--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLEditor\Modules\ControllableViewBase.h" />
     <ClInclude Include="include\DUOLEditor\Modules\GameView.h" />
     <ClInclude Include="include\DUOLEditor\Modules\HierarchyContextMenu.h" />
     <ClInclude Include="include\DUOLEditor\Modules\EditorEventManager.h" />
@@ -96,6 +97,7 @@
     <ClInclude Include="include\DUOLEditor\Modules\ViewBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLEditor\Modules\ControllableViewBase.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\GameView.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\SceneView.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\HierarchyContextMenu.cpp" />
