--- a/DUOLCommon/DUOLCommon.vcxproj.filters
+++ b/DUOLCommon/DUOLCommon.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="include\DUOLCommon\ImGui\imstb_truetype.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLCommon\Util\Hash.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLCommon\Util\SpookyV2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLCommon\DeviceHelper.cpp">
@@ -84,6 +90,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLCommon\ImGui\imgui_widgets.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLCommon\Util\Hash.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLCommon\Util\SpookyV2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
