Inspecter에서 blendState 수정 가능하도록 구현
Inspecter에서 blendState 수정 가능하도록 구현
Bloom 완성

--- a/DUOLEffectEditor/Game_Engine/Game_Engine.vcxproj
+++ b/DUOLEffectEditor/Game_Engine/Game_Engine.vcxproj
@@ -73,25 +73,25 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\Build\Win32\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win32;$(LibraryPath);$(SolutionDir)..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)..\Build\Win32\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win32;$(LibraryPath);$(SolutionDir)..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\Build\x64\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win64;$(LibraryPath);$(SolutionDir)..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)..\Build\x64\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include;$(IncludePath);$(SolutionDir)..\Dependency\boost_1_80_0\</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win64;$(LibraryPath);$(SolutionDir)..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
