--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj
@@ -72,25 +72,25 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)..\Build\Win32\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
     <ReferencePath>$(ReferencePath)</ReferencePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win32;$(LibraryPath);$(SolutionDir)..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)..\Build\Win32\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
     <ReferencePath>$(ReferencePath)</ReferencePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win32;$(LibraryPath);$(SolutionDir)..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>..\..\Build\x64\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
     <ReferencePath>$(ReferencePath)</ReferencePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win64;$(LibraryPath);..\..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>..\..\Build\x64\$(Configuration)\</OutDir>
-    <IncludePath>./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
+    <IncludePath>../../DUOLMath/include/;./;C:\Program Files (x86)\Visual Leak Detector\include;$(ProjectDir)include\;$(IncludePath);..\..\Dependency\boost_1_80_0\</IncludePath>
     <ReferencePath>$(ReferencePath)</ReferencePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win64;$(LibraryPath);..\..\Dependency\boost_1_80_0\stage\lib;$(OutDir)</LibraryPath>
   </PropertyGroup>
