에디터 Inspector 개발 중
 - Name, Tag, Active header
 - Transform Component draw 및 조작
 - ImGui 패널의 피봇이 맞지 않던 문제 수정

--- a/DUOLEditor/DUOLEditor.vcxproj.filters
+++ b/DUOLEditor/DUOLEditor.vcxproj.filters
@@ -243,6 +243,9 @@
     <ClInclude Include="include\DUOLEditor\Modules\ControllableViewBase.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLEditor\Modules\Inspector.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLEditor\Editor.cpp">
@@ -468,6 +471,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLEditor\Modules\ControllableViewBase.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLEditor\Modules\Inspector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
