레벨 에디터 개발 중입니다.
- SceneView ⇒ Object Picking 에러가 나지 않게 안전 코드를 심었으며 모든 위치를 스크린 좌표계로 통일하여 Picking이 정확하게 되도록 개선
 - Inspector header에서 GameObject의 Name, Tag, Active 등 선택된 게임 오브젝트를 바꿀 때 바뀌어지는 게임 오브젝트에 기존 게임 오브젝트의 내역이 적용되던 버그 수정
 - Level Editor 색상과 폰트 적용할 수 있도록 개선
 - RTTR Reflection 을 이용해 Inspector에 Transform Component 내용을 그림 (일반적인 오토 시리얼라이즈 구현 중 ..)

--- a/DUOLCommon/DUOLCommon.vcxproj
+++ b/DUOLCommon/DUOLCommon.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLCommon\MetaDataType.h" />
     <ClInclude Include="include\DUOLCommon\Util\Hash.h" />
     <ClInclude Include="include\DUOLCommon\DeviceHelper.h" />
     <ClInclude Include="include\DUOLCommon\Event\Event.h" />
