--- a/DUOLCommon/DUOLCommon.vcxproj.filters
+++ b/DUOLCommon/DUOLCommon.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="include\DUOLCommon\Util\SpookyV2.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLCommon\MetaDataType.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLCommon\DeviceHelper.cpp">
