Perline Noise를 구현하기 위해서 구조를 수정해야 할 것 같다.
Perline Noise를 구현하기 위해서 구조를 수정해야 할 것 같다.
오늘 작업은 노이즈맵을 생성하는 알고리즘 추가.
퇴근 후 R&D를 조금 해보자.

--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="include\Core\DirectX11\DXEngine.h" />
     <ClInclude Include="include\Core\Pass\ShaderFlagsManager.h" />
     <ClInclude Include="include\Core\Resource\Factory.h" />
+    <ClInclude Include="include\Core\Resource\PerlinNoise.hpp" />
     <ClInclude Include="include\Export\dllExport.h" />
     <ClInclude Include="include\Core\DirectX11\geometrygenerator.h" />
     <ClInclude Include="include\Export\IGraphicsEngine.h" />
