--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="include\DUOLEditor\TestScripts\ModelShooter.h" />
     <ClInclude Include="include\DUOLEditor\TestScripts\MoveController.h" />
     <ClInclude Include="include\DUOLEditor\TestScripts\PhysicsEventTest.h" />
+    <ClInclude Include="include\DUOLEditor\Util\EditorSettings.h" />
     <ClInclude Include="include\DUOLEditor\Util\Font.h" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Drags\DragScalar.h" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Layout\ContainerCollapsable.h" />
@@ -112,6 +113,7 @@
     <ClCompile Include="src\DUOLEditor\TestScripts\ModelShooter.cpp" />
     <ClCompile Include="src\DUOLEditor\TestScripts\MoveController.cpp" />
     <ClCompile Include="src\DUOLEditor\TestScripts\PhysicsEventTest.cpp" />
+    <ClCompile Include="src\DUOLEditor\Util\EditorSettings.cpp" />
     <ClCompile Include="src\DUOLEditor\Util\Font.cpp" />
     <ClCompile Include="src\DUOLEditor\UI\Panels\PanelUndecorated.cpp" />
     <ClCompile Include="src\DUOLEditor\UI\Panels\PanelWindow.cpp" />
